<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtInvitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invitation"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtChooseCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_country" />

        <Spinner
            android:id="@+id/spnCountries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtChooseCIty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_city" />

        <Spinner
            android:id="@+id/spnCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtChooseHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_house" />

        <Spinner
            android:id="@+id/spnHouses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>